# LibGraphics

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  WINDOWS.md
.github/workflows/: build.yml  ci.yml  testing.yml
assets/: .gitignore
assets/cmake/: LibGraphicsConfig.cmake.in  Testing-LibGraphics.cmake
assets/include/public/LibGraphics/color/: BackgroundScanner.hpp  Information.hpp
assets/include/public/LibGraphics/match/: TemplateMatcher.hpp
assets/include/public/LibGraphics/type/: Rect.hpp  Region.hpp
assets/src/match/: MatchResult.cpp
assets/tests/: image.test.cpp
assets/tests/color/: BackgroundScanner.test.cpp  BackgroundScanner.wrappers.test.cpp  Color.test.cpp
assets/tests/match/: MatchResult.test.cpp
assets/tests/ocr/: OcrTextReader.test.cpp
assets/tests/type/: Rect.test.cpp
assets/tests/utils/: Converter.test.cpp
cmake/: Leptonica-LibGraphics.cmake  Leptonica.cmake  OpenCV-LG.cmake  OpenCV-LibGraphics.cmake  OpenCV.cmake  Tesseract-LibGraphics.cmake  Tesseract.cmake  Testing-LibGraphics.cmake  Testing.cmake  Version-LibGraphics.cmake  Version.cmake
config/: version.hpp.in
include/: LibGraphics.hpp  library.hpp  opencv_info.hpp
include/LibGraphics/: Image.hpp
include/LibGraphics/color/: BackgroundScanner.hpp  Information.hpp
include/LibGraphics/exceptions/: LowConfidenceException.hpp
include/LibGraphics/helpers/: OpenCV.hpp
include/LibGraphics/match/: LowConfidenceException.hpp  MatchResult.hpp  Region.hpp  TemplateMatcher.hpp
include/LibGraphics/ocr/: OcrResult.hpp  OcrTextReader.hpp
include/LibGraphics/utils/: Converter.hpp
include/public/LibGraphics/: Image.hpp  LibGraphics.hpp  opencv_info.hpp  version.hpp
include/public/LibGraphics/exceptions/: LowConfidenceException.hpp
include/public/LibGraphics/match/: MatchOptions.hpp  MatchResult.hpp  TemplateMatcher.hpp
include/public/LibGraphics/ocr/: OcrResult.hpp  OcrTextReader.hpp
include/public/LibGraphics/type/: Rect.hpp  Region.hpp
src/: Image.cpp  LibGraphics.cpp  library.cpp  opencv_info.cpp
src/color/: BackgroundScanner.cpp  Information.cpp  Scanner.cpp  Scanner.hpp
src/helpers/: OpenCV.cpp  color.cpp  color.hpp  scan.cpp  scan.hpp
src/match/: Region.cpp  TemplateMatcher.cpp
src/ocr/: OcrTextReader.cpp
src/type/: Region.cpp
src/utils/: Converter.cpp
tests/: image.test.cpp
tests/assets/ocr/: ocr-test.xcf
tests/assets/utils/: redsquare.xcf
tests/color/: BackgroundScanner.test.cpp  BackgroundScanner.wrappers.test.cpp  Color.test.cpp  test_backgroundscanner.cpp  test_color.cpp
tests/helpers/: test_color.cpp
tests/match/: MatchResult.test.cpp  Region.test.cpp  TemplateMatcher.test.cpp
tests/ocr/: OcrTextReader.test.cpp
tests/type/: Region.test.cpp
tests/utils/: Converter.test.cpp
